# src/data-contracts/response/payment.responce.ts
@@ -1,0 +1,9 @@
+export default interface PaymentResponse {
+    payment_id: number;
+    member_id: number;
+    amount: number;
+    transaction_id: string;
+    created_on: string; 
+    updated_on: string;
+    status:string; 
+};
